--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -842,6 +842,14 @@
       height: 2.5rem;
       width: 8rem;
       font-size: 1.5rem;
+
+      &:hover {
+        transform: translate(50%, -0.2rem);
+      }
+
+      &:active {
+        transform: translate(50%, -0.1rem);
+      }
     }
   }
   .modal {
